--- a/client/Purchasing page/style.css
+++ b/client/Purchasing page/style.css
@@ -1,3 +1,26 @@
-.container-fluid {
-    background-position: top-left;
-}
+   body {
+       margin: 0;
+       padding: 0;
+   }
+   
+   .container {
+       display: flex;
+       height: 100vh;
+   }
+   
+   .background-image {
+       flex: 1;
+       background: url('./Assets/Mango.jpg') center center/cover no-repeat;
+       margin: 10px;
+   }
+   
+   .content {
+       flex: 1;
+       background: #f2f2f2;
+       padding: 20px;
+       margin: 10px;
+   }
+   
+   h1 {
+       margin-top: 0;
+   }
