Added basic loader

--- a/client/style.css
+++ b/client/style.css
@@ -2,6 +2,10 @@
 body {
     line-height: 1.5;
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    --nav-load-time: 300ms;
+    --nav-link-load-time: 500ms;
+    --article-load-delay: calc(var(--nav-load-time) + var(--nav-link-load-time))
 }
 
 * {
@@ -10,11 +14,41 @@ body {
     box-sizing: border-box;
 }
 
-body {
-    margin: 0;
-    --nav-load-time: 300ms;
-    --nav-link-load-time: 500ms;
-    --article-load-delay: calc(var(--nav-load-time) + var(--nav-link-load-time))
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #333333;
+    transition: opacity 0.75s, visibility 0.75s;
+  }
+  
+  .loader--hidden {
+    opacity: 0;
+    visibility: hidden;
+  }
+  
+  .loader::after {
+    content: "";
+    width: 75px;
+    height: 75px;
+    border: 15px solid #dddddd;
+    border-top-color: #009578;
+    border-radius: 50%;
+    animation: loading 0.75s ease infinite;
+  }
+  
+  @keyframes loading {
+    from {
+      transform: rotate(0turn);
+    }
+    to {
+      transform: rotate(1turn);
+    }
   }
   
   
